# King-Grass-Ripper-Landscaping-Services

./: .clang-format  .clang-format-ignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
assets/shaders/: shader.fs  shader.vs
src/: Game.cpp  Game.h  main.cpp  objloader.cpp  objloader.h  objmodel.cpp  objmodel.h  shader.cpp  shader.h
src/assets/: Asset.h
src/assets/manager/: AssetManager.h
src/assets/provider/: AssetProvider.h  FileAssetProvider.cpp  FileAssetProvider.h
src/assets/types/: TextAsset.h
src/ecs/: Archetype.cpp  Archetype.h  BorrowState.h  CommandQueue.h  Query.h  System.h  TypeSet.cpp  TypeSet.h  World.h
src/ecs/archetypal/: Archetype.cpp  Archetype.h  Arena.h  TypeSet.cpp  TypeSet.h
src/gl_wrapper/: Utils.h  VAO.h
src/gl_wrapper/buffer/: Buffer.h
src/gl_wrapper/shader/: Shader.cpp  Shader.h  UniformImpl.h
src/gl_wrapper/texture/: Texture.h
src/graphics/: Material.h  Model.cpp  Model.h
src/graphics/image/: Image.cpp  Image.h
src/graphics/text/: Freetype.h
src/models/: ObjectModel.cpp  ObjectModel.h
src/shaders/: shader.fs  shader.vs
src/tracy/: TracyClient.cpp
src/tracy/client/: TracyAlloc.cpp  TracyArmCpuTable.hpp  TracyCallstack.cpp  TracyCallstack.h  TracyCallstack.hpp  TracyDebug.hpp  TracyDxt1.cpp  TracyDxt1.hpp  TracyFastVector.hpp  TracyKCore.cpp  TracyKCore.hpp  TracyLock.hpp  TracyOverride.cpp  TracyProfiler.cpp  TracyProfiler.hpp  TracyRingBuffer.hpp  TracyScoped.hpp  TracyStringHelpers.hpp  TracySysPower.cpp  TracySysPower.hpp  TracySysTime.cpp  TracySysTime.hpp  TracySysTrace.cpp  TracySysTrace.hpp  TracyThread.hpp  tracy_SPSCQueue.h  tracy_concurrentqueue.h  tracy_rpmalloc.cpp  tracy_rpmalloc.hpp
src/tracy/common/: TracyAlign.hpp  TracyAlloc.hpp  TracyApi.h  TracyColor.hpp  TracyForceInline.hpp  TracyMutex.hpp  TracyProtocol.hpp  TracyQueue.hpp  TracySocket.cpp  TracySocket.hpp  TracyStackFrames.cpp  TracyStackFrames.hpp  TracySystem.cpp  TracySystem.hpp  TracyUwp.hpp  TracyVersion.hpp  TracyYield.hpp  tracy_lz4.cpp  tracy_lz4.hpp  tracy_lz4hc.cpp  tracy_lz4hc.hpp
src/tracy/libbacktrace/: alloc.cpp  backtrace.hpp  config.h  dwarf.cpp  elf.cpp  fileline.cpp  filenames.hpp  internal.hpp  macho.cpp  mmapio.cpp  posix.cpp  sort.cpp  state.cpp
src/tracy/tracy/: Tracy.hpp  TracyC.h  TracyD3D11.hpp  TracyD3D12.hpp  TracyLua.hpp  TracyOpenCL.hpp  TracyOpenGL.hpp  TracyVulkan.hpp
src/utils/: Camera.cpp  Camera.h  Movement.cpp  Movement.h  Verify.h  Window.cpp  Window.h
src/utils/json/: Parser.cpp  Parser.h
tests/: ApprovalTests.hpp  main.cpp
tests/ecs/: Archetype.cpp  Arena.cpp  Query.cpp  TypeSet.cpp  World.cpp  ecs.cpp
tests/graphics/: Image.cpp
tests/graphics/approval_tests/: Image.image_load.approved.txt
